--- a/src/header.css
+++ b/src/header.css
@@ -9,6 +9,70 @@
   width: 100%;
 }
 
+#iwh_header_block_tweets > div,
+#iwh_header_block_tweets > span {
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -ms-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  z-index: 99999;
+}
+
+#iwh_header_block_tweets.on > div,
+#iwh_header_block_tweets.on > span {
+  opacity: 1;
+  visibility: visible;
+}
+
+#iwh_header_block_tweets.off > div,
+#iwh_header_block_tweets.off > span {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#iwh_tweets_parent {
+  background-color: #242b32;
+  border: 1px solid #ffffff;
+  position: absolute;
+  width: 400px;
+  height: 600px;
+  right: 5px;
+  top: 60px;
+  overflow: hidden;
+}
+
+#iwh_tweets {
+  width: 100%;
+  height: 100%;
+  padding-right: 17px;
+  overflow-y: scroll;
+  box-sizing: content-box;
+}
+
+#iwh_arrow_tweets,
+#iwh_arrow_tweets_border {
+  position: absolute;
+  right: 60px;
+  border-style: solid;
+  border-top: none;
+}
+
+#iwh_arrow_tweets {
+  top: 50px;
+  margin-right: 1.5px;
+  border-color: transparent transparent #242b32 transparent;
+  border-width: 11px;
+  z-index: 88888888888888888;
+}
+
+#iwh_arrow_tweets_border {
+  top: 49px;
+  margin-right: 1.5px;
+  border-color: transparent transparent #ffffff transparent;
+  border-width: 11px;
+}
+
 #iwh_readme {
   border: 2px solid #ffffff;
   border-radius: 50px;
@@ -17,20 +81,26 @@
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
+  overflow: hidden;
 }
-#iwh_readme a,
-#iwh_readme {
-  text-align: center;
+#iwh_readme_text {
+  padding: 20px;
+}
+#iwh_readme_text a,
+#iwh_readme_text {
   color: #ffffff;
 }
 
-#iwh_readme h1,
-#iwh_readme h2,
-#iwh_readme h3 {
+#iwh_readme_text h1,
+#iwh_readme_text h2,
+#iwh_readme_text h3 {
+  white-space: pre-wrap;
   text-decoration: underline;
   color: #458ca5;
 }
-#iwh_readme code {
+
+#iwh_readme_text code {
+  white-space: pre-wrap;
   color: #c4d733;
 }
 
@@ -92,16 +162,18 @@
 #iwh_header_menu img {
   width: 24px;
 }
-
+#iwh_header_notif:hover,
 #iwh_header_services:hover,
 #iwh_header_menu:hover {
   cursor: pointer;
 }
 
-#iwh_header_services,
 #iwh_header_notif,
 #iwh_header_status {
-  margin-right: 3%;
+  margin-right: 24px;
+}
+#iwh_header_services {
+  margin-right: 12px;
 }
 
 #iwh_header_status {
@@ -109,14 +181,14 @@
 }
 
 #iwh_header_menu {
-  margin-left: 3%;
+  margin-left: 12px;
 }
 
 #iwh_header_nav img {
   height: 100%;
 }
 
-#iwh_popin_menu {
+#iwh_header_popin_menu {
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
   -ms-transition: all 0.25s ease-in-out;
@@ -132,21 +204,21 @@
   color: #ffffff;
 }
 
-#iwh_popin_menu.on {
+#iwh_header_popin_menu.on {
   transform: translateX(0);
 }
 
-#iwh_popin_menu.off {
+#iwh_header_popin_menu.off {
   transform: translateX(-100%);
 }
 
-#iwh_popin_menu_ul {
+#iwh_header_popin_menu_ul {
   padding: 0;
   margin: 0;
   width: 100%;
 }
 
-.iwh_popin_menu_a {
+.iwh_header_popin_menu_a {
   display: block;
   border: solid 1px #ffffff;
   border-left: none;
@@ -159,14 +231,14 @@
   z-index: 99999;
 }
 
-.iwh_popin_menu_a:hover {
+.iwh_header_popin_menu_a:hover {
   text-decoration: underline;
   color: #ffffff;
   background-color: #458ca5;
   text-decoration-color: #c4d733;
 }
 
-.iwh_popin_menu_a > img {
+.iwh_header_popin_menu_a > img {
   vertical-align: text-bottom;
   height: 25px;
   width: 25px;
@@ -198,20 +270,20 @@
 #iwh_arrow_services,
 #iwh_arrow_services_border {
   position: absolute;
-  right: 3%;
+  right: 12px;
   border-style: solid;
   border-top: none;
 }
 
 #iwh_arrow_services {
-  top: 51px;
+  top: 50px;
   margin-right: 1.5px;
   border-color: transparent transparent #242b32 transparent;
   border-width: 11px;
 }
 
 #iwh_arrow_services_border {
-  top: 50px;
+  top: 49px;
   margin-right: 1.5px;
   border-color: transparent transparent #ffffff transparent;
   border-width: 11px;
@@ -219,7 +291,7 @@
 
 #iwh_popin_services {
   position: absolute;
-  right: 2%;
+  right: 5px;
   top: 60px;
   width: 300px;
   border: solid 1px #ffffff;
@@ -396,12 +468,17 @@
     width: calc(100% / 3 - 10px);
     padding-top: calc(100% / 3 - 10px);
   }
-  #iwh_popin_menu {
+  #iwh_header_popin_menu {
     width: 100%;
   }
-  .iwh_popin_menu_a {
+  .iwh_header_popin_menu_a {
     text-align: center;
     border-right: none;
     padding: 30px;
+  }
+
+  #iwh_tweets_parent {
+    width: 100%;
+    right: 0;
   }
 }
