--- a/src/header.css
+++ b/src/header.css
@@ -44,11 +44,11 @@
 }
 
 #iwh_tweets {
-  width: calc(100% + 60px);
+  width: 100%;
   height: 100%;
   overflow-y: scroll;
   padding-right: 50px;
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 #iwh_arrow_tweets,
@@ -515,5 +515,15 @@
   #iwh_arrow_tweets,
   #iwh_arrow_tweets_border {
     display: none;
+  }
+}
+
+@media (min-device-width: 1281px) {
+  #iwh_tweets {
+    width: calc(100% + 60px);
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 50px;
+    box-sizing: border-box;
   }
 }
