--- a/src/header.css
+++ b/src/header.css
@@ -9,7 +9,10 @@
   line-height: 1;
   box-sizing: content-box;
   position: relative;
-  z-index: 99999;
+}
+
+#istex_web_header a {
+  color: #ffffff;
 }
 
 #istex_web_header *:hover {
@@ -113,9 +116,11 @@
   margin-right: 10%;
   overflow: hidden;
 }
+
 #iwh_readme_text {
   padding: 20px;
 }
+
 #iwh_readme_text a,
 #iwh_readme_text {
   color: #ffffff;
