--- a/src/header.css
+++ b/src/header.css
@@ -384,6 +384,7 @@
   line-height: 1;
   margin: 20% 0 0 0;
   font-family: "Montserrat", sans-serif;
+  color: #ffffff;
 }
 
 @media all and (max-device-width: 1024px) {
